<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.sentrysoftware</groupId>
		<artifactId>matrix</artifactId>
		<version>0.5-SNAPSHOT</version>
	</parent>

	<groupId>com.sentrysoftware.hardware.cli</groupId>
	<artifactId>hardware-sentry-cli</artifactId>
	<name>Hardware Sentry CLI</name>
	<description>Hardware Sentry CLI</description>
	<properties>
		<java.version>11</java.version>

		<!-- Sentry Skin Version (to be used in site.xml and therefore be consistent with the Velocity Tool artifact!) -->
		<sentrySkinVersion>4.0</sentrySkinVersion>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.sentrysoftware</groupId>
			<artifactId>matrix-engine</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli-spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
				<configuration>
					<!-- MATSYA is already wrapped in matrix-engine -->
					<excludeGroupIds>com.sentrysoftware.patrol.matsya</excludeGroupIds>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<mainClass>com.sentrysoftware.hardware.cli.HardwareSentryCLIApplication</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
		<!-- site -->
			<!-- Configuration of the site plugin, to also generate automatic reports (Reference Guide, etc.)
				 and leverage the Sentry Maven Skin (which requires the "Velocity Tools", i.e. Java code that
				 handles most advanced parsing operations -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<generateReports>true</generateReports>
					<generateProjectInfo>false</generateProjectInfo>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
					<relativizeDecorationLinks>true</relativizeDecorationLinks>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.sentrysoftware.doc</groupId>
						<artifactId>sentry-skin-velocity-tools</artifactId>
						<version>${sentrySkinVersion}</version>
					</dependency>
				</dependencies>
				<executions>
					<!-- package -->
					<!-- Create the documentation at the same time we package the KM -->
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>site</goal>
							<goal>jar</goal>
						</goals>
						<configuration>
							<attach>true</attach>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<!-- Disable the projec-info-report plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<reportSets>
					<reportSet>
						<configuration>
							<skip>true</skip>
						</configuration>
					</reportSet>
				</reportSets>
			</plugin>
			<!-- about -->
			<!-- (to generate about.html and release-notes.html -->
			<plugin>
				<groupId>com.sentrysoftware.maven</groupId>
				<artifactId>about-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

</project>
